2007-10-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Require perl >= 5.6.0 for some features we use,
	like `our´.

2007-09-30	tsch

	* ppport.h
	* Cairo.xs
	* CairoPath.xs
	* CairoPattern.xs
	* CairoSurface.xs
	* MANIFEST
	* cairo-perl-private.h
	* cairo-perl.h: Add and use the portability header ppport.h from
	Devel::PPPort to hopefully fix compilation on older perls.

2007-09-27	tsch

	* Cairo.pm
	* NEWS
	* README: Stable release 1.042.

2007-09-27	tsch

	* Makefile.PL: Make missing prerequisites fatal.

2007-09-09	tsch

	* cairo-perl.typemap: Add const char * for backwards
	compatibility.

2007-08-13	tsch

	* doctypes: Add missing type names.

2007-05-27	tsch

	* Cairo.pm, NEWS, README: Stable release 1.041.

2007-05-27	tsch

	* t/CairoSurface.t: Use proper version checks to decide when to
	skip the create_for_stream tests.

2007-05-13	tsch

	* Makefile.PL, README, t/Cairo.t, t/CairoPattern.t: Use
	Test::Number::Delta to make floating point number comparisons more
	reliable.

2007-05-10	tsch

	* Cairo.pm, NEWS, README: Stable release 1.040.

2007-05-10	tsch

	* t/CairoSurface.t: For now, skip tests that make cairo crash.

2007-05-06	tsch

	* Cairo.pm: Document new API.  Mark functions that were added
	after cairo 1.0.

2007-05-06	tsch

	* Cairo.xs
	* CairoPattern.xs
	* Makefile.PL
	* cairo-perl.h
	* t/Cairo.t
	* t/CairoPattern.t: Use 1.4.0 in version checks.

	* Cairo.xs: If CAIRO_PERL_DEBUG is true, call
	cairo_debug_reset_static_data at exit.

2007-03-17	tsch

	* Cairo.xs
	* t/Cairo.t: Wrap cairo_get_scaled_font.

	* CairoSurface.xs
	* t/CairoSurface.t: Re-add the binding for cairo_surface_finish.
	It was orignally removed because its effect can also be achieved
	by destroying the surface or letting it go out of scope.  But
	Oleksandr Alex Protasenko convinced me that it's still a good idea
	to have it anyway, mainly for paginated surfaces like PDF and PS
	which defer rendering as long as they can.  With $surf->finish you